# manipulador_bigquery

./: pyproject.toml
